-- Added next word predictor

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@ $(document).ready(function () {
 <p style="font: bold">  Shiny Web App </p>
 <ol style="list-style-type: decimal">
   <li> TMDB's Kaggle movie data Statistical analysis  <a href="https://vineet.shinyapps.io/final9/" class="uri">https://vineet.shinyapps.io/final9/</a></li>
+  <li> Next word predictor  <a href="https://vineet.shinyapps.io/next-word-predictor-csv/" class="uri">https://vineet.shinyapps.io/next-word-predictor-csv/</a></li>
   </ol>
 
 <p style="font: bold">  PowerShell </p>
