--- a/index.html
+++ b/index.html
@@ -155,13 +155,10 @@ $(document).ready(function () {
 <ol style="list-style-type: decimal">
   <li> Rename the file name using powershell  <a href="https://jaiswalvineet.github.io/Rename_In_PowerShell.html" class="uri">https://jaiswalvineet.github.io/Rename_In_PowerShell.html</a></li>
   </ol>
-</div>
   
   <p style="font: bold"> LinkedIn </p>
 <ol style="list-style-type: decimal">
-  <li> Interpret R Linear/Multiple regression output (lm output point by point), also with Python
-      <a href="https://www.linkedin.com/pulse/interpret-r-linearmultiple-regression-output-lm-point-vineet-jaiswal/" class="uri">
-        https://www.linkedin.com/pulse/interpret-r-linearmultiple-regression-output-lm-point-vineet-jaiswal/</a></li>
+  <li> Interpret R Linear/Multiple regression output (lm output point by point), also with Python <a href="https://www.linkedin.com/pulse/interpret-r-linearmultiple-regression-output-lm-point-vineet-jaiswal/" class="uri"> https://www.linkedin.com/pulse/interpret-r-linearmultiple-regression-output-lm-point-vineet-jaiswal/</a></li>
   </ol>
 </div>
 
