--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@ $(document).ready(function () {
   <p style="font: bold"> LinkedIn </p>
 <ol style="list-style-type: decimal">
   <li> Interpret R Linear/Multiple regression output (lm output point by point), also with Python <a href="https://www.linkedin.com/pulse/interpret-r-linearmultiple-regression-output-lm-point-vineet-jaiswal/" class="uri"> https://www.linkedin.com/pulse/interpret-r-linearmultiple-regression-output-lm-point-vineet-jaiswal/</a></li>
+  <li> Natural Language Processing(NLP), Keynotes and R,Python packages <a href="https://www.linkedin.com/pulse/natural-language-processingnlp-keynotes-rpython-packages-jaiswal/" class="uri"> https://www.linkedin.com/pulse/natural-language-processingnlp-keynotes-rpython-packages-jaiswal/</a></li>
   </ol>
 </div>
 
