-- Added binary tree link

--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@ $(document).ready(function () {
   <li> Rename the file name using powershell  <a href="https://jaiswalvineet.github.io/Rename_In_PowerShell.html" class="uri">https://jaiswalvineet.github.io/Rename_In_PowerShell.html</a></li>
   </ol>
   
+  <p style="font: bold">  Data Structure and Algorithms </p>
+<ol style="list-style-type: decimal">
+  <li> Simple Binary Tree   <a href="https://github.com/jaiswalvineet/dsandalgorithm/blob/master/SimpleBinaryTree.cs" class="uri">https://github.com/jaiswalvineet/dsandalgorithm/blob/master/SimpleBinaryTree.cs</a></li>
+  </ol>
+  
   <p style="font: bold"> LinkedIn </p>
 <ol style="list-style-type: decimal">
   <li> Interpret R Linear/Multiple regression output (lm output point by point), also with Python <a href="https://www.linkedin.com/pulse/interpret-r-linearmultiple-regression-output-lm-point-vineet-jaiswal/" class="uri"> https://www.linkedin.com/pulse/interpret-r-linearmultiple-regression-output-lm-point-vineet-jaiswal/</a></li>
