Added deep learning link

--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@ $(document).ready(function () {
 <h4 class="author"><em>Vineet Jaiswal</em></h4>
 
 </div>
+<p style="font: bold"> Deep Learning</p>
+<ol style="list-style-type: decimal">
+<li> Computer Vision | MNIST digit classifier with more than 99% accuracy,Keras, TensorFlow <a href="https://github.com/jaiswalvineet/Deep_Learning_Examples/blob/master/Digit%20Identifier.ipynb" class="uri">https://github.com/jaiswalvineet/Deep_Learning_Examples/blob/master/Digit%20Identifier.ipynb</a></li>
+</ol>
+
 
 <p style="font: bold"> R Programming </p>
 <ol style="list-style-type: decimal">
